--- a/changelog.yaml
+++ b/changelog.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2021-2023, Arm Limited. All rights reserved.
+# Copyright (c) 2021-2024, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -773,6 +773,9 @@ subsections:
 
       - title: PSCI
         scope: psci
+
+      - title: ROMlib
+        scope: romlib
 
       - title: GPT
         scope: gpt
