build: prefer `gcc-ar` over `ar`
The `gcc-ar` wrapper exists to make it easier to support LTO on some
versions of GCC. The two commands are compatible, accepting exactly the
same arguments, so this change moves us to `gcc-ar` to ensure that we
are configuring LTO correctly.

Change-Id: I24a4cfaad29d35b09f847299081f83ca9b41aa8a
Signed-off-by: Chris Kay <chris.kay@arm.com>

--- a/lib/romlib/Makefile
+++ b/lib/romlib/Makefile
@@ -5,7 +5,7 @@
 #
 
 AS          = $(CROSS_COMPILE)gcc
-AR          = $(CROSS_COMPILE)ar
+AR          = $(CROSS_COMPILE)gcc-ar
 LD          = $(CROSS_COMPILE)ld
 OC          = $(CROSS_COMPILE)objcopy
 CPP         = $(CROSS_COMPILE)gcc -E
