feat(tc): bind GPU SMMU on TC4
A SMMU-700 is used on TC4 for only GPU, on both FVP and FPGA. Add DT
binding for it.

Change-Id: I1b840676fd02c3961d4efdd769f12a4b01d459fb
Signed-off-by: Leo Yan <leo.yan@arm.com>

--- a/fdts/tc4.dts
+++ b/fdts/tc4.dts
@@ -46,8 +46,13 @@
 #include "tc3-4-base.dtsi"
 
 / {
+	smmu_700: iommu@3f000000 {
+		status = "okay";
+	};
+
 	gpu: gpu@2d000000 {
 		interrupts = <GIC_SPI 242 IRQ_TYPE_LEVEL_HIGH 0>;
 		interrupt-names = "IRQAW";
+		iommus = <&smmu_700 0x200>;
 	};
 };
