refactor(tlc): fix static check errors and code style
Change-Id: I8cbe5ee940d409ed3f81f792c2ade0b93287ae62
Signed-off-by: Harrison Mutai <harrison.mutai@arm.com>

--- a/tools/tlc/pyproject.toml
+++ b/tools/tlc/pyproject.toml
@@ -30,6 +30,7 @@ classifiers = [
 [tool.poetry.scripts]
 # Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
 "tlc" = "tlc.__main__:cli"
+"lint" = "isort && black && darglint"
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -135,13 +136,11 @@ addopts = [
 
 [tool.coverage.run]
 source = ["tests"]
-
-[coverage.paths]
-source = "tlc"
-
-[coverage.run]
 branch = true
 
-[coverage.report]
+[tool.coverage.paths]
+source = "tlc"
+
+[tool.coverage.report]
 fail_under = 50
 show_missing = true
