--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ memory = "memory.memmap:main"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-tlc = {path = "tools/tlc"}
+tlc = {path = "tools/tlc", develop = true}
 
 [tool.poetry.group.docs]
 optional = true
