refactor(tlc): fix static check errors and code style
Change-Id: I8cbe5ee940d409ed3f81f792c2ade0b93287ae62
Signed-off-by: Harrison Mutai <harrison.mutai@arm.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ memory = "memory.memmap:main"
 [tool.poetry.dependencies]
 python = "^3.8"
 cot-dt2c = {path = "tools/cot_dt2c", develop = true}
-tlc = {path = "tools/tlc"}
+tlc = {path = "tools/tlc", develop = true}
 
 [tool.poetry.group.docs]
 optional = true
