--- a/tools/tlc/pyproject.toml
+++ b/tools/tlc/pyproject.toml
@@ -49,13 +49,13 @@ mypy-extensions = "^0.4.3"
 pre-commit = "^2.15.0"
 pydocstyle = "^6.1.1"
 pylint = "^2.11.1"
-pytest = "^7.0.0"
+pytest = "^8.0.0"
 pyupgrade = "^2.29.1"
 safety = "^2.2.0"
 coverage = "^6.1.2"
 coverage-badge = "^1.1.0"
 pytest-html = "^4.1.1"
-pytest-cov = "^3.0.0"
+pytest-cov = "5.0.0"
 
 [tool.black]
 # https://github.com/psf/black
@@ -135,13 +135,11 @@ addopts = [
 
 [tool.coverage.run]
 source = ["tests"]
-
-[coverage.paths]
-source = "tlc"
-
-[coverage.run]
 branch = true
 
-[coverage.report]
+[tool.coverage.paths]
+source = ["tlc"]
+
+[tool.coverage.report]
 fail_under = 50
 show_missing = true
