fix(cot-dt2c): use processed Device Tree source file as input
Update the test files to eliminate the use of preprocessor macros,
as the tool now requires processed output. The documentation has
also been revised accordingly.

Additionally, remove the Device Tree Source test files that were
added to test the #ifdef conditions.

Change-Id: I13a682db20e5e44170fc25a2e2dbedd45b9c7321
Signed-off-by: Manish V Badarkhe <Manish.Badarkhe@arm.com>

--- a/changelog.yaml
+++ b/changelog.yaml
@@ -1450,6 +1450,9 @@ subsections:
       - title: Transfer List Compiler
         scope: tlc
 
+      - title: Chain of Trust device tree to C source file
+        scope: cot-dt2c
+
   - title: Dependencies
     scope: deps
 
