--- a/tools/cot_dt2c/tests/test_invalid_bracket.dtsi
+++ b/tools/cot_dt2c/tests/test_invalid_bracket.dtsi
@@ -8,21 +8,18 @@
  *
  */
 
-#include <example/example.h>
-#include <example/example/example.h>
-
 cot {
 	manifests {
 		compatible = "arm, cert-descs";
 
 		example_cert: example_cert {
 			root-certificate;
-			image-id =<EXAMPLE_ID>;
+			image-id =<2>;
 			antirollback-counter = <&example_ctr>;
 
 			example_hash: example_hash
 			{
-				oid = EXAMPLE_HASH_ID;
+				oid = "1.3.6.1.4.1.4128.2100.101";
 			};
 
 		};
@@ -32,7 +29,7 @@ cot {
 		compatible = "arm, img-descs";
 
 		example {
-			image-id = <EXAMPLE_ID>;
+			image-id = <2>;
 			parent = <&example_cert>;
 			hash = <&example_hash>;
 		};
@@ -45,13 +42,13 @@ non_volatile_counters: non_volatile_counters {
 	#size-cells = <0>;
 
 	example_ctr: example_ctr {
-		id  = <TRUSTED_NV_CTR_ID>;
-		oid = CCA_FW_NVCOUNTER_OID;
+		id  = <0>;
+		oid = "1.3.6.1.4.1.4128.2100.3";
 	};
 };
 
 rot_keys {
 	example_pk: example_pk {
-		oid = EXAMPLE_PK_OID;
+		oid = "1.3.6.1.4.1.4128.2100.101";
 	};
 };
