--- a/tools/cot_dt2c/tests/test_invalid_missing_ctr.dtsi
+++ b/tools/cot_dt2c/tests/test_invalid_missing_ctr.dtsi
@@ -9,22 +9,19 @@
  *
  */
 
-#include <example/example.h>
-#include <example/example/example.h>
-
 cot {
 	manifests {
 		compatible = "arm, cert-descs";
 
 		example_cert: example_cert {
 			root-certificate;
-			image-id =<EXAMPLE_ID>;
+			image-id =<2>;
 			signing-key = <&swd_rot_pk>;
 			antirollback-counter = <&example_ctr>;
 
 			example_hash: example_hash
 			{
-				oid = EXAMPLE_HASH_ID;
+				oid = "1.3.6.1.4.1.4128.2100.104";
 			};
 
 		};
@@ -34,7 +31,7 @@ cot {
 		compatible = "arm, img-descs";
 
 		example {
-			image-id = <EXAMPLE_ID>;
+			image-id = <2>;
 			parent = <&example_cert>;
 			hash = <&example_hash>;
 		};
@@ -51,6 +48,6 @@ non_volatile_counters: non_volatile_counters {
 
 rot_keys {
 	example_pk: example_pk {
-		oid = EXAMPLE_PK_OID;
+		oid = "1.3.6.1.4.1.4128.2100.104";
 	};
 };
